--- a/Views/dashboard.ejs
+++ b/Views/dashboard.ejs
@@ -10,11 +10,11 @@
 <body>
 
 
-    <h1>WELCOME</h1>
+    <h1>Welcome <%= session?.Username %></h1>
     <div class="allPost">
-    <% results.forEach(item =>{ %>
+    <% result.forEach(item =>{ %>
         <div class="eachPost">
-            <h1><%= item.title%></h1>
+            <h1 class="title"><%= item.title%></h1>
 
            <a href="/<%=item.id%>"> <img src="<%= item.image %>" alt=""></a>
            <p><%= item.text%></p>
@@ -43,5 +43,8 @@
 
 
 </div>
+
+
+<h3 id="time"><%= session?.time %></h3>
     </body>
     </html>
